fixed alignment issues on cta image

--- a/public/layout.css
+++ b/public/layout.css
@@ -2,6 +2,7 @@ body {
   box-sizing: border-box;
   text-align: center;
   margin: 0%;
+  padding: 0%;
 }
 
 .header-container {
@@ -83,10 +84,11 @@ body {
 
 .cta-image-container {
   grid-column: span 12;
+  padding-top: 4rem;
+  align-self: center;
 }
 
 .cta-image {
   width: 100%;
   height: 55%;
-  margin-top: 6rem;
 }
